Element with position:fixed stops scrolling at the bottom of the page, but is painted in the right place on Chacos.com. https://bugs.webkit.org/show_bug.cgi?id=181741 rdar://problem/36593581

Reviewed by Tim Horton.
Source/WebCore:

The #ifdef for iOS was wrong; on iOS, visibleSize() is in content coordinates and matches
unscaledDocumentRect, so there's no need to scale it. Doing so computed the wrong unscaledMaximumScrollPosition
which broke hit-testing when the document minimum scale was > 1.

Test: fast/visual-viewport/ios/min-scale-greater-than-one.html

* page/FrameView.cpp:
(WebCore::FrameView::unscaledMaximumScrollPosition const):

Tools:

If zoomToScale:animated: is called with the current zoom level, call the callback
rather than doing nothing.

* WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:
(-[TestRunnerWKWebView zoomToScale:animated:completionHandler:]):

LayoutTests:

* fast/visual-viewport/ios/min-scale-greater-than-one-expected.txt: Added.
* fast/visual-viewport/ios/min-scale-greater-than-one.html: Added.


Canonical link: https://commits.webkit.org/197830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227430 268f45cc-cd09-0410-ab3c-d52691b4dbfc